# toolbox

./: Cargo.toml  LICENSE
hide/: Cargo.toml
hide/src/: main.rs
killtask/: Cargo.toml
killtask/src/: main.rs
pargs/: Cargo.toml
pargs/src/: main.rs
scph/: Cargo.toml
scph/src/: main.rs
setfileno/: Cargo.toml
setfileno/src/: main.rs
shell/: Cargo.toml
shell/src/: main.rs
src/: lib.rs  main.rs
src/command/: cert.rs  decrypt.rs  encrypt.rs  hide.rs  mod.rs  scph.rs  shell.rs  sshh.rs  sudo.rs  unhide.rs  wt.rs
sshh/: Cargo.toml
sshh/src/: main.rs
sshhlib/: Cargo.toml
sshhlib/src/: lib.rs
sudo/: Cargo.toml
sudo/src/: main.rs
unhide/: Cargo.toml
unhide/src/: main.rs
win-file-attr/: Cargo.toml
win-file-attr/src/: lib.rs
