[package]
name = "toolbox"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "3.2"
aes-gcm = "0.9"
sha2 = "0.10"
rand = "0.8"
num_cpus = "1.13"
crossbeam-channel = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "consoleapi", "minwindef", "winreg", "winerror", "winnt"] }
